# VectiX

./: README.md  Tiltfile
Server/: .gitignore  .python-version  Dockerfile  README.md  pyproject.toml  ruff.toml
Server/.github/: pull_request_template.MD
Server/.github/ISSUE_TEMPLATE/: bug_report.md
Server/.github/workflows/: deploy.yml
Server/envs/: .env.development  .env.production
Server/migrations/: env.py
Server/migrations/versions/: 5d7b7536b4d0_db_init.py  6d5fa9d70dc0_finance_init.py  d7858fa40947_db_init.py
Server/scripts/: create_superuser.py  init_routes.py
Server/src/app/: main.py  setup.py
Server/src/app/api/: __init__.py  deps.py  router.py
Server/src/app/models/: __init__.py  account.py  attachment.py  category.py  expense_split.py  group.py  group_expense.py  group_member.py  module.py  permission.py  role.py  route.py  settlement.py  subscription.py  transaction.py  user.py
Server/src/app/schemas/: __init__.py  account.py  attachment.py  auth.py  category.py  dashboard.py  group.py  group_expense.py  module.py  permission.py  role.py  route.py  settlement.py  sidebar.py  subscription.py  transaction.py  user.py
Server/src/app/services/: __init__.py  account.py  attachment_service.py  auth.py  base.py  category.py  dashboard_service.py  google_auth.py  group_expense_service.py  group_service.py  module.py  permission.py  role.py  route.py  settlement_service.py  sidebar.py  subscription_service.py  transaction.py  user.py
Server/src/core/: __init__.py  config.py  security.py
Server/src/core/cache/: __init__.py  client.py  utils.py
Server/src/core/db/: __init__.py  base.py  session.py
Server/src/core/err/: __init__.py  handlers.py  models.py
Server/src/core/log/: __init__.py  config.py
Server/src/core/middleware/: __init__.py  cors.py  logging.py
Server/src/core/utils/: __init__.py  enum_helper.py  file_utils.py  rate_limit.py
Server/src/settings/: run.py
Web/: .env  .gitignore  (+14 more)
(+294 files in other folders)
