[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "VECTIX"
version = "1.0.0"
description = "Personal Finance Management App"
readme = "README.md"
authors = ["Sudeep Ranjan Sahoo <sudeepranjan@iitbhilai.ac.in>"]
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.0"
fastapi-cache2 = "^0.2.0"
redis = "^5.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.0"}
python-multipart = "^0.0.18"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"
loguru = "^0.7.0"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.1.0"
commitizen = "^3.13.0"

[tool.poetry.scripts]
dev = "src.settings.run:dev_command"
prod = "src.settings.run:prod_command"
format = "src.settings.run:ruff_format"
format-fix = "src.settings.run:ruff_format_fix"
lint = "src.settings.run:ruff_lint"
lint-fix = "src.settings.run:ruff_lint_fix"
makemigrations = "src.settings.run:makemigrations"
migrate = "src.settings.run:migrate"
createsuperuser = "scripts.create_superuser:main"
pre-commit = "src.settings.run:pre_commit"
commit = "src.settings.run:commit"
cz = "commitizen.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
lint.select = [
    "F",
    "E",
    "W",
    "C",
    "UP",
    "I",
]
lint.ignore = [
    "E402",
    "UP006",
    "UP007",
    "E741",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "F403",
]

[tool.ruff.lint.mccabe]
max-complexity = 24

[tool.ruff.lint.pydocstyle]
convention = "numpy"





